feat: Add CSS styles for homepage banner and inject elements using JS

--- a/src/template.html
+++ b/src/template.html
@@ -13,6 +13,9 @@
             <button>About us</button>
         </nav>        
     </header>
-    <div id="content"></div>
+    <div id="content">
+        <div class="homepage">
+        </div>
+    </div>
 </body>
 </html>
