feat: Add basic layout for Home Page with CSS

--- a/src/template.html
+++ b/src/template.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <header>
-        <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About us</button>
+        <nav class="tabs">
+            <button class="tab active">Home</button>
+            <button class="tab">Menu</button>
+            <button class="tab">About us</button>
         </nav>        
     </header>
     <div id="content">
